--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,9 +2,9 @@
 # Change "coffeebank" to your GitHub username
 # Change "moonrise" to your repository name
 url: "https://llPushkarll.github.io"
-baseurl: "/moonrise"
+baseurl: "/i"
 siteIcon: /media/android-chrome-192x192.png
-siteYear: 2020
+siteYear: 2021
 siteFooterlink: /about
 showinSearchEngines: true
 # googleAnalyticsID: (uncomment to use)
