--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,10 +11,10 @@ showinSearchEngines: true
 
 
 # Set basic server info
-serverName: Moonrise MC
+serverName: MagicGames
 serverDescription: A Minecraft server where we have lots of fun!
-serverIP: 31.41.59.26:5358
-useBedrockForOnlineStatus: false
+serverIP: play.magicgames.cf:25369
+useBedrockForOnlineStatus: true
 
 
 # Discord information
