--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,7 +18,7 @@ useBedrockForOnlineStatus: true
 
 
 # Discord information
-discordInvite: https://discord.gg/minecraft
+discordInvite: https://discord.gg/GpXbhfEXr7
 discordServerID: 805997287033667624
 discordChannelID: 870149520825147403
 
