--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@
 # Change "coffeebank" to your GitHub username
 # Change "moonrise" to your repository name
 url: "https://llPushkarll.github.io"
-baseurl: "/i"
+baseurl: "/magicgames"
 siteIcon: /media/android-chrome-192x192.png
 siteYear: 2021
 siteFooterlink: /about
