--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # Set this website's info
 # Change "coffeebank" to your GitHub username
 # Change "moonrise" to your repository name
-url: "https://llPushkarll.github.io"
+url: "https://llPushkarSinghll.github.io"
 baseurl: "/magicgames"
 siteIcon: /media/android-chrome-192x192.png
 siteYear: 2021
